@@ -46,6 +46,12 @@ Details    : The ldiskfs mballoc3 code was using a __u16 to store the group
 	     number, but with 8TB+ filesystems there are more than 65536
 	     groups, causing an oops.
 
+Severity   : normal
+Bugzilla   : 15576
+Description: Resolve device initialization race
+Details    : Prevent proc handler from accessing devices added to the
+             obd_devs array but yet be intialized.
+
 Severity   : enhancement
 Bugzilla   : 15308
 Description: Update to SLES10 SP2 kernel-2.6.16.60-0.23.
